# Python-voice-input

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  voice_input_GSR.py
voice_input_juu7g/: voice_input_GSR.py  voice_input_Sphinx.py
